<resources>
    <string name="app_name">201233427 정우현</string>
    <string name="empty" />
    <string name="Introduction_insert">입력</string>
    <string name="Introduction_clear">삭제</string>
    <string name="confirm_to_clear">정말 삭제하시겠습니까?</string>
    <string name="confirm_to_insert">입력 확인</string>
    <string name="confirm_to_change_image">이미지를 변경할 기능을 선택해주세요.</string>
    <string name="confirm_to_action">기능을 선택해주세요.</string>
    <string name="edit_image">프로필 편집</string>
    <string name="Introduction_about">보기</string>

    <!-- insert string resource -->
    <string name="insert_introduction">자기소개 입력</string>
    <string name="name">이름</string>
    <string name="student_id">학번</string>
    <string name="email">이메일주소</string>
    <string name="tel">전화번호</string>
    <string name="introduction">자기소개</string>
    <string name="save">저장</string>
    <string name="confirm">완료</string>
    <string name="error">오류</string>
    <string name="loading">처리중</string>
    <string name="okay">확인</string>
    <string name="cancel">취소</string>
    <string name="exit">나가기</string>
    <string name="camera">카메라</string>
    <string name="gallery">갤러리</string>
    <string name="gentleman">남자</string>
    <string name="lady">여자</string>
    <string name="sex">성별</string>
    <string name="age">나이</string>
    <string name="sms">문자</string>
    <string name="dial">전화</string>

    <string name="hint_email">이메일주소를 입력해주세요.</string>
    <string name="hint_tel">전화번호를 입력해주세요.</string>
    <string name="hint_introduction">자기소개를 입력해주세요.</string>
    <string name="request_write">데이터를 입력해주시기 바랍니다.</string>
    <string name="completeDelete">삭제되었습니다.</string>
    <string name="edit_cover_image">커버 편집</string>
    <string name="edit_profile_image">프로필 편집</string>
</resources>
